@@ -100,8 +100,10 @@ public class ServletApiAdvice {
                 if (Boolean.TRUE != excluded.get()) {
                     ServletContext servletContext = servletRequest.getServletContext();
                     if (servletContext != null) {
+                        ClassLoader servletCL = servletTransactionCreationHelper.getClassloader(servletContext);
                         // this makes sure service name discovery also works when attaching at runtime
-                        determineServiceName(servletContext.getServletContextName(), servletContext.getClassLoader(), servletContext.getContextPath());
+                        determineServiceName(servletContext.getServletContextName(), servletCL, servletContext.getContextPath());
+
                     }
 
                     Transaction transaction = servletTransactionCreationHelper.createAndActivateTransaction(request);
