@@ -40,6 +40,7 @@ endif::[]
 * Fix `ClassNotFoundError` with old versions of Spring resttemplate {pull}1524[#1524]
 * Fix Micrometer-driven metrics validation errors by the APM Server when sending with illegal values - {pull}1559[#1559]
 * Serialize all stack trace frames when setting `stack_trace_limit=-1` instead of none - {pull}1571[#1571]
+* Fix `UnsupportedOperationException` when calling `ServletContext.getClassLoader()` - {pull}1576[#1576]
 
 [float]
 ===== Refactors
